@@ -1,0 +1,3 @@
+<object name="portal_catalog" meta_type="Plone Catalog Tool">
+  <index name="getObjPositionInParent" remove="True" />
+</object>
